# SquashPhaseDetector

./: .dockerignore  .gitignore  API end-points.md  README.md  TODOs.md  docker-compose.yml  sam2 integration details.md
.knowlege_base/: development workflow and future extensions.md  implementation details.md  implementation plan.md  project overview.md  tech stack summary.md
.references/: image_predictor.ipynb
backend/: Dockerfile  README.md  app.py  eda.py  pyproject.toml  requirements.txt  ruff.toml  sam2.py  test_sam2.py  yolo.py
backend/models/: game_detector.py  pose_yolo_pose.py  sam2_model.py  segmentation_sam2.py  ultralytics_yolo_pose.py  yolo_pose.py
backend/routers/: README.md  analysis.py  pose.py  segmentation.py  video.py
backend/sam2/: automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py  sam2_video_predictor_legacy.py
backend/sam2/modeling/: memory_attention.py  memory_encoder.py  position_encoding.py  sam2_base.py
backend/sam2/modeling/backbones/: hieradet.py
backend/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
backend/sam2/utils/: amg.py
backend/utils/: export.py  pose.py  preprocess.py  preprocessing.py  segmentation.py  video.py  video_utils.py
data/: .gitignore
frontend/: .prettierrc  Dockerfile  README.md  index.html  nginx.conf  package.json  playground.js  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ProcessSidemenu.tsx  ProcessingProgressSidebar.tsx  ProcessingProgressSidemenu.tsx  StageContent.tsx  VideoDetail.tsx
(+51 files in other folders)
