[project]
name = "backend"
version = "0.1.0"
description = "Squash Game Phase Detection Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Fast API Backend
    "fastapi[standard]>=0.115.0",
    # Video Processing
    "imagehash>=4.3.2",
    "opencv-python>=4.11.0.86",
    # "moviepy>=2.1.2", # not sure if needed tho
    # SAM2 Segmentation Model
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    # YOLO-Pose Detection Model
    "ultralytics==8.1.23",
    # Data Analysis
    # "scikit-learn==1.6.1",
    # "scipy==1.13.0",
]
